--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "faucet-ui",
+  "name": "aneema-marketplace",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,10 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bulma": "^0.9.4",
-    "ethers": "^5.7.1",
+    "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
